--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -31,7 +32,7 @@
          <PasswordField />
       </children>
    </FlowPane>
-   <FlowPane alignment="CENTER" hgap="100.0" prefHeight="72.0" prefWidth="458.0">
+   <FlowPane alignment="CENTER" hgap="100.0" prefHeight="55.0" prefWidth="652.0">
       <children>
          <Button mnemonicParsing="false" onAction="#onHelloButtonClick" onMouseClicked="#onHelloButtonClick" text="Aceptar" />
          <Button mnemonicParsing="false" text="Borrar" />
@@ -42,4 +43,11 @@
       <font>
          <Font size="18.0" />
       </font></Label>
+   <Hyperlink alignment="CENTER" onAction="#openLink" text="Enlace a documentacion oficial FlowPane" textAlignment="CENTER" textFill="#eb1515">
+      <VBox.margin>
+         <Insets />
+      </VBox.margin>
+      <font>
+         <Font size="19.0" />
+      </font></Hyperlink>
 </VBox>
